<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_btn_bg_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/set_tv_account"
            style="@style/setting_item"
            android:text="@string/set_tv_account" />

        <TextView
            android:id="@+id/set_tv_info"
            style="@style/setting_item"
            android:text="@string/set_tv_info" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:background="@color/gray_btn_bg_color" />

        <TextView
            android:id="@+id/set_tv_feedback"
            style="@style/setting_item"
            android:text="@string/set_tv_feedback" />

        <TextView
            android:id="@+id/set_tv_aboutus"
            style="@style/setting_item"
            android:text="@string/set_tv_aboutus" />

    </LinearLayout>
</LinearLayout>