<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/acc_iv_pic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_launcher" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_centerVertical="true"
                android:background="@color/gray_btn_bg_color" />

            <ImageView
                android:id="@+id/acc_iv_changepic"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="60dp"
                android:src="@mipmap/ic_launcher" />
        </RelativeLayout>

        <TextView
            style="@style/account_tv_item"
            android:text="@string/acc_tv_name" />

        <EditText
            android:id="@+id/acc_et_name"
            style="@style/account_et_item" />

        <TextView
            style="@style/account_tv_item"
            android:text="@string/acc_tv_phone" />

        <EditText
            android:id="@+id/acc_et_phone"
            style="@style/account_et_item" />

        <TextView
            style="@style/account_tv_item"
            android:text="@string/acc_tv_birthday" />

        <EditText
            android:id="@+id/acc_et_birthday"
            style="@style/account_et_item" />
    </LinearLayout>
</LinearLayout>